# HelloCpp

./: .gitignore  CMakeLists.txt
src/: main.cpp
tests/: test.cpp
